update: change dependency from ContainerInstances to LaunchTemplate in ECS configuration

--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -173,7 +173,7 @@ Resources:
   ASG:
     Type: AWS::AutoScaling::AutoScalingGroup
     DependsOn:
-      - ContainerInstances
+      - LaunchTemplate
     Properties:
       VPCZoneIdentifier:
         - {'Fn::ImportValue': !Sub '${ParentVPCStack}-PrivateSubnet1'}
