--- a/infra/deploy/database.yml
+++ b/infra/deploy/database.yml
@@ -1,9 +1,8 @@
 template-file-path: infra/templates/database.yml
 parameters:
-  VPC: vpc-020d437435794899e
+  ParentVPCStack: Devfolio-Network
+  ParentClusterStack: Devfolio-Cluster
   DBInstanceIdentifier: "devfolio-db-id"
   DBEngine: postgres
   DBVersion: 17.4
-  ECSSecurityGroup: sg-051ccb6bf6069f98a
-  RouteTable: rtb-0eb493fab61e079b3
 tags: {}
