--- a/infra/templates/service.yml
+++ b/infra/templates/service.yml
@@ -35,9 +35,9 @@ Parameters:
     Type: Number
     Description: The amount (in MiB) of memory used by the task.
     Default: 512
-  ECSTaskExecutionRole:
-    Type: String
-    Description: The IAM role assumed by Amazon ECS container agent.
+  # ECSTaskExecutionRole:
+  #   Type: String
+  #   Description: The IAM role assumed by Amazon ECS container agent.
 
 Resources:
   TargetGroup:
