update: add ECS cluster role output and update task definition to use imported role

--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -223,3 +223,9 @@ Outputs:
     Value: !Ref SG
     Export:
       Name: !Sub '${AWS::StackName}-SG'
+
+  Role:
+    Description: The name of the ECS cluster
+    Value: !Ref Role
+    Export:
+      Name: !Sub '${AWS::StackName}-Role'
