--- a/infra/templates/service.yml
+++ b/infra/templates/service.yml
@@ -66,7 +66,7 @@ Resources:
     Type: AWS::ECS::TaskDefinition
     Properties:
       Family: !Sub "${ServiceName}-task"
-      # ExecutionRoleArn: !Ref ECSTaskExecutionRole
+      ExecutionRoleArn: {'Fn::ImportValue': !Sub '${ParentClusterStack}-Role'}
       RequiresCompatibilities:
         - "EC2"
       NetworkMode: bridge
