update: refactor subnet references in ALB, database, and ECS configurations to use consolidated import values

--- a/infra/templates/alb.yml
+++ b/infra/templates/alb.yml
@@ -25,9 +25,7 @@ Resources:
       Type: application
       SecurityGroups:
         - !Ref SG
-      Subnets:
-        - {'Fn::ImportValue': !Sub '${ParentVPCStack}-PublicSubnet1'}
-        - {'Fn::ImportValue': !Sub '${ParentVPCStack}-PublicSubnet2'}
+      Subnets: !Split [',', {'Fn::ImportValue': !Sub '${ParentVPCStack}-PublicSubnets'}]
       Tags:
         - Key: Name
           Value: !Sub ${AWS::StackName}-ALB
