--- a/infra/deploy/ecs.yml
+++ b/infra/deploy/ecs.yml
@@ -1,5 +1,5 @@
 template-file-path: infra/templates/ecs.yml
 parameters:
-  ParentVPCStack: Devfolio-Network
+  ParentVPCStack: Devfolio-VPC
   ParentALBStack: Devfolio-ALB
 tags: {}
