update: fix indentation for IPv6 range in ECS security group egress rules

--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -135,8 +135,8 @@ Resources:
           SourceSecurityGroupId: {'Fn::ImportValue': !Sub '${ParentALBStack}-SG'}  # Replace with your ALB SG
 
       SecurityGroupEgress:
-        - IpProtocol: -1  # Allow all outbound traffic (needed for updates & registry access)
-        - CidrIpv6: "::/0"
+        - IpProtocol: -1
+          CidrIpv6: "::/0"
 
 
   LaunchTemplate:
