update: add network interface configuration for IPv6 support in ECS template

--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -160,6 +160,10 @@ Resources:
               VolumeType: gp2
               DeleteOnTermination: true
               Encrypted: true
+        NetworkInterfaces:
+          - DeviceIndex: 0
+            Ipv6AddressCount: 1   # Auto-assign 1 private IPv6 address
+            AssociatePublicIpAddress: false
         UserData:
           'Fn::Base64': !Sub |
             #!/bin/bash -ex
