update: remove IPv6 network interface configuration and change ASG to use public subnets

--- a/infra/templates/ecs.yml
+++ b/infra/templates/ecs.yml
@@ -160,12 +160,6 @@ Resources:
               VolumeType: gp2
               DeleteOnTermination: true
               Encrypted: true
-        NetworkInterfaces:
-          - DeviceIndex: 0
-            Ipv6AddressCount: 1   # Auto-assign 1 private IPv6 address
-            AssociatePublicIpAddress: false
-            Groups:
-              - !Ref SG
         UserData:
           'Fn::Base64': !Sub |
             #!/bin/bash -ex
@@ -181,7 +175,7 @@ Resources:
   ASG:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      VPCZoneIdentifier: !Split [',', {'Fn::ImportValue': !Sub '${ParentVPCStack}-PrivateSubnets'}]
+      VPCZoneIdentifier: !Split [',', {'Fn::ImportValue': !Sub '${ParentVPCStack}-PublicSubnets'}]
       LaunchTemplate:
         LaunchTemplateId: !Ref LaunchTemplate
         Version: !GetAtt LaunchTemplate.LatestVersionNumber
